Changes in stable release 2.4.14 (not released yet)

* Modules do not crash anymore when more than 126 windows are on
  the desktop.

-------------------------------------------------------------------

Changes in stable release 2.4.13 (1-Nov-2002)

* Icon titles for windows with an icon position hint no longer
  appear at random places.

* Fvwm no longer displays two icon pictures when switching from
  NoIconOverride to IconOverride with windows that provide their
  own icon window.

* The Current, All, Pick, ThisWindow and PointerWindow commands
  work on shaded windows too.

* Fixed a problem stacking iconified transients.

* No more flickering when raising transients.

* Fixed a number of problems with window stacking, some new in
  2.4.10 or later, some older problems that have been around for a
  long time.

* Windows starting lowered or on any layer other than the default
  layer are displayed at the right place in FvwmPager.

* Bindings with the "A"ny context can not be overridden by Gnome
  panel or OpenOffice.

-------------------------------------------------------------------

Changes in stable release 2.4.12 (10-Oct-2002)

* Fixed drawing problems with TiledPixmap and Solid MenuFaces which
  appeared in 2.4.10, replacing the same problem with ?Gradient
  MenuFaces in 2.4.9.

* Fixed accidental menu animation with certain menu position hints.

* Increased maximum allowed key symbol name length to 200
  characters.

* Allow quotes in conditional command conditions.

* Fixed starting Move at random position when pointer is on a
  different screen.

* Transient windows do not appear in FvwmWinList after they have
  been moved on the desktop.

-------------------------------------------------------------------

Changes in stable release 2.4.11 (20-Sep-2002)

* Allow the use of mouse buttons other than the first in
  FvwmWinList when invoked transient.

* Fixed a crash with ssh-askpass introduced in 2.4.10.
