@@ -281,7 +281,7 @@ main(int argc, char **argv)
 
   SetMessageMask(Fvwm_fd, M_CONFIGURE_WINDOW | M_RES_CLASS | M_RES_NAME |
                  M_ADD_WINDOW | M_DESTROY_WINDOW | M_ICON_NAME |
-                 M_DEICONIFY | M_ICONIFY | M_END_WINDOWLIST |
+                 M_DEICONIFY | M_ICONIFY | M_ICON_LOCATION | M_END_WINDOWLIST |
                  M_NEW_DESK | M_NEW_PAGE | M_FOCUS_CHANGE | M_WINDOW_NAME |
                  M_CONFIG_INFO |
 #ifdef MINI_ICONS
