@@ -1,3 +1,14 @@
+2002-11-10  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmIconMan/FvwmIconMan.h:
+	* FvwmIconMan/fvwm.c (ProcessMessage):
+	(win_in_viewport):
+	(iconify):
+	(icon_location):
+	* FvwmIconMan/FvwmIconMan.c (main):
+	FvwmIconMan uses the icon position to decide whether a window is managed
+	or not
+
 2002-10-10  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmIconMan/FvwmIconMan.1:
